# gea-embedded

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY.md  package.json
cmake/: BuildXSC.cmake  CompileJS.cmake
docs/: README.md  adding-a-target.md  app-authoring.md  architecture.md  device-mirror-protocol.md  esp32-target.md  generated-code.md  rpi-target-plan.md  screen-apps.md  simulator.md  testing.md  troubleshooting.md
examples/: apps.json
examples/analog-clock/: env.d.ts  index.tsx  package-lock.json  styles.css  tsconfig.json  vite.config.ts
examples/analog-clock/src/: AnalogClockView.tsx  ClockStore.tsx
examples/app-launcher/: env.d.ts  index.tsx  package-lock.json  styles.css  tsconfig.json  vite.config.ts
examples/app-launcher/components/: App.tsx
examples/app-launcher/stores/: LauncherStore.tsx
examples/bouncing-balls/: env.d.ts  index.ts  package-lock.json  tsconfig.json  vite.config.ts
examples/bouncing-balls-jsx/: constants.tsx  env.d.ts  index.tsx  package-lock.json  package.json  styles.css  vite.config.ts
examples/bouncing-balls-jsx/components/: App.tsx  BallField.tsx  FpsBadge.tsx
examples/bouncing-balls-jsx/stores/: BallStore.tsx
examples/bouncing-balls/src/: balls.ts  render.ts  runtime.ts
examples/button-tetris/: constants.tsx  index.tsx  package-lock.json  styles.css  vite.config.ts
examples/button-tetris/components/: App.tsx  ControlButton.tsx  Controls.tsx  GameOverOverlay.tsx  TetrisBoard.tsx
examples/button-tetris/stores/: TetrisStore.tsx
examples/hid-clicker/: env.d.ts  package-lock.json  tsconfig.json  vite.config.ts
examples/hid-clicker/src/: index.tsx  styles.css
examples/image-demo/: index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/image-demo/src/: loader.ts  runtime.ts  viewer.ts
examples/settings/: env.d.ts  index.tsx  package-lock.json  vite.config.ts
examples/sky-hop/: README.md  index.ts  package-lock.json  tsconfig.json  vite.config.ts
examples/sky-hop-jsx/: assets.tsx  constants.tsx  index.tsx  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
examples/sky-hop-jsx/components/: App.tsx  Background.tsx  Coins.tsx  Controls.tsx  Enemies.tsx  Goal.tsx  Hud.tsx  LevelTiles.tsx  Player.tsx  WonOverlay.tsx  World.tsx
examples/sky-hop-jsx/src/: assetBytes.ts
examples/sky-hop-jsx/stores/: GameStore.tsx
examples/sky-hop/src/: assetBytes.ts  assets.ts  game.ts  input.ts  runtime.ts
examples/static-card/: index.tsx  package-lock.json  vite.config.ts
examples/static-card/components/: App.tsx  Card.tsx
examples/tic-tac-toe/: fonts.css  index.tsx  package-lock.json  package.json  vite.config.ts
examples/tic-tac-toe/components/: App.tsx  Board.tsx  Cell.tsx  StatusText.tsx
examples/tic-tac-toe/stores/: GameStore.tsx
examples/tic-tac-toe/test/: vite-plugin-gea-embedded.test.ts
examples/tilt-breakout/: constants.tsx  index.tsx  package-lock.json  package.json  styles.css  vite.config.ts
examples/tilt-breakout/components/: App.tsx  Ball.tsx  BrickField.tsx  Hud.tsx  Paddle.tsx
examples/tilt-breakout/stores/: BreakoutStore.tsx
examples/typography/: index.tsx  package-lock.json  styles.css  vite.config.ts
examples/watch-face/: constants.tsx  index.tsx  package-lock.json  styles.css  tsconfig.json  vite.config.ts
examples/watch-face/components/: App.tsx  Complications.tsx  ForecastStrip.tsx  HeroTime.tsx  Metrics.tsx  WatchFace.tsx  WifiFooter.tsx  WifiSettings.tsx
examples/watch-face/stores/: WatchStore.tsx
lib/: package-lock.json  package.json  tsconfig.json  vite-plugin-gea-embedded.ts
lib/gea-embedded/: Button.tsx  index.d.ts  package.json
lib/gea-embedded/Settings/: NetworkList.tsx  Overview.tsx  PasswordEntry.tsx  SettingsContent.tsx  SettingsPanel.tsx  SettingsRow.tsx  index.tsx  store.tsx  styles.css
lib/vite-plugin-gea-embedded/: ast.ts  compile.ts  css-assets.ts  definitions.ts  index.ts  native-api.ts  style.ts  target-paths.ts  thin-js.ts  types.ts
lib/vite-plugin-gea-embedded/c/: app.ts  bindings.ts  generate.ts  mirror.ts  store-runtime.ts
lib/vite-plugin-gea-embedded/expressions/: accelerometer.ts  core.ts  jsx.ts  static.ts
lib/vite-plugin-gea-embedded/fonts/: css.ts  generate.ts  rasterize.ts  write.ts
lib/vite-plugin-gea-embedded/store/: fields.ts  method-context.ts  method-statements.ts  (+4 more)
scripts/: detect-app-https-support.mjs  esp32s3-touch-amoled-2.06.sh  format-apps.mjs  generate-installed-app-plan.mjs  generate-resident-app-registry.mjs  generate-vscode-config.mjs  install-app.mjs  recover-apps.mjs  uninstall-app.mjs
simulator/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
simulator/src/: app-loader.test.ts  app-loader.ts  app-runtime.test.ts  app-runtime.ts  defaults.test.ts  defaults.ts  framebuffer.test.ts  framebuffer.ts  main.ts  manifest.test.ts  manifest.ts  mirror-runtime.ts  screen-runtime.test.ts  screen-runtime.ts  style.css
targets/esp32-s3-touch-amoled-2.06/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
targets/esp32-s3-touch-amoled-2.06/main/: CMakeLists.txt  app_main.c  apps.c  audio.c  display.c  idf_component.yml  touch.c
targets/esp32-s3-touch-amoled-2.06/main/include/: display.h  touch.h  wifi_config.h.example
targets/rpi-display-1/: CMakeLists.txt  README.md
targets/rpi-display-1/cmake/: FindKMS.cmake  FindLibInput.cmake  FindQuickJS.cmake  rpi.toolchain.cmake
targets/rpi-display-1/docs/: try-on-pi.md
targets/rpi-display-1/main/: app_main.c  app_main_screen.c  assets.c  crt_tm_stubs.c  display.c  display_kms.c  display_linuxfb.c  imu.c  input.c  log.c  mirror.c  ota.c  platform.c  quickjs_shim.c  quickjs_shim.h  wifi.c
targets/rpi-display-1/main/include/: QuickJSPlatform.h  assets.h  display.h  display_linuxfb.h  imu.h  input.h  log.h  mirror.h  ota.h  platform.h  wifi.h
targets/rpi-display-1/scripts/: geat-rpi.sh  install-zero.sh
targets/rpi-display-1/systemd/: gea-embedded.service
targets/shared/: ble.c  font_8x16.c  image.c  imu.c  platform.c  raster.c
targets/web/: build-screen-runtime.sh  build-web.sh
(+48 files in other folders)
